News links go to new page

--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -23,7 +23,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="/news/newadmin1">
+          <a class="news-item col-11" href="/news/newadmin1" target="_blank">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/people/ajouffray/profile.jpg?a=height&w=6&h=6" class="img-fluid">
@@ -41,7 +41,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research" target="_blank">
             <div class="row ps-0">
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> May 24, 2021</span>
@@ -60,7 +60,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="/news/newadmin1">
+          <a class="news-item col-11" href="/news/newadmin1" target="_blank">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/david.jpg?a=height&w=6&h=6" class="img-fluid">
@@ -78,7 +78,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="/news/newadmin1">
+          <a class="news-item col-11" href="/news/newadmin1" target="_blank">
             <div class="row ps-0">
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> Feb 3, 2021</span>
@@ -97,7 +97,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="/news/citsatdb">
+          <a class="news-item col-11" href="/news/citsatdb" target="_blank">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=1&h=1" class="img-fluid">
@@ -115,7 +115,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="/news/newadmin1">
+          <a class="news-item col-11" href="/news/newadmin1" target="_blank">
             <div class="row ps-0">
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> Mar 21, 2020</span>
@@ -140,7 +140,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="http://bioinfo.usu.edu/alfanet/">
+          <a class="news-item col-11" href="http://bioinfo.usu.edu/alfanet/" target="_blank">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/tools/alfalfa_logo.png?a=height&w=1&h=1" class="img-fluid">
@@ -157,7 +157,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="/news/newdeephpi">
+          <a class="news-item col-11" href="/news/newdeephpi" target="_blank">
             <div class="row">
               <div class="col-10 ps-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> Dec 1, 2019</span>
@@ -175,7 +175,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="/news/covidtracker">
+          <a class="news-item col-11" href="/news/covidtracker" target="_blank">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="https://intermountainhealthcare.org/-/media/coronavirus-covid-19.jpg?la=en&h=286&w=300&mw=300&hash=CE04AC2D6DB0A5068DBB7D0CCEF7636A1C66C738"
@@ -199,7 +199,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="https://www.usu.edu/today/story/first-international-heroes-night-to-celebrate-international-faculty">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/first-international-heroes-night-to-celebrate-international-faculty" target="_blank">
             <div class="row ps-0">
               <div class="col px-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> November 4, 2021</span>
@@ -213,7 +213,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="https://www.usu.edu/today/story/nih-funds-usu-researchers-work-on-fathers-nutrition-and-childrens-health">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/nih-funds-usu-researchers-work-on-fathers-nutrition-and-childrens-health" target="_blank">
             <div class="row ps-0">
               <div class="col px-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> August 9, 2021</span>
@@ -227,7 +227,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="https://www.usu.edu/today/story/data-scientists-uncovering-genes-that-protect-alfalfa-against-salinity-stress">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/data-scientists-uncovering-genes-that-protect-alfalfa-against-salinity-stress" target="_blank">
             <div class="row ps-0">
               <div class="col px-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> April 6, 2021</span>
@@ -241,7 +241,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-11" href="https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research" target="_blank">
             <div class="row ps-0">
               <div class="col px-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> March 24, 2021</span>
