raghav new picture

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -211,7 +211,7 @@
           before joining the KAABiL. With a research focus on bioinformatics, he is currently working on pathogen-host protein-protein interactions
           using computational tools and various molecular biology techniques.",
     email: "raghav.kataria@usu.edu",
-    img: "/image/raw/people/raghav/raghav.jpg",
+    img: "/image/aspect/people/raghav/raghav2.jpg?a=c&w=5&h=6",
     social: [
       {type: "researchgate", link: "https://www.researchgate.net/profile/Raghav_Kataria"},
       {type: "linkedin", link: "https://www.linkedin.com/in/raghav-kataria-14458211b/"},
