--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <div class="row mt-3">
+    <div class="row mt-3 justify-content-center">
       {% for person in bioinfoStaff %}
         <div class="col-md-3 col-sm-6 text-center">
           {{ personCardModal(person) }}
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <div class="row mt-3">
+    <div class="row mt-3 justify-content-center">
       {% for person in gradStudents %}
         <div class="col-md-3 col-sm-6  text-center">
           {{ personCardModal(person) }}
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div class="row mt-3">
+    <div class="row mt-3 justify-content-center">
       {% for person in undergradStudents %}
         <div class="col-md-3 col-sm-6  text-center">
           {{ personCardModal(person) }}
