Add me to alumni

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -225,4 +225,4 @@
 {% set bioinfoStaff = [roussie] %}
 {% set gradStudents = [naveen, raghav, david] %}
 {% set undergradStudents = [shelby, kolton, andrew] %}
-{% set alumni = [caleb, cristian, kaige, matt, nikhil, raul, suyash, udarika] %}
+{% set alumni = [shelby, caleb, cristian, kaige, matt, nikhil, raul, suyash, udarika] %}
