--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -203,7 +203,7 @@
             <div class="row ps-0">
               <div class="col px-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> November 4, 2021</span>
-                <h5 class="header mb-0">First International Heroes Night</h5>
+                <h5 class="header mb-0">USU Today - First International Heroes Night</h5>
                 <div class="desc mt-0">
                   Dr. Rakesh Kaundal has been selected for the 2021 International Faculty Recognition Award. 
                 </div>
@@ -217,7 +217,7 @@
             <div class="row ps-0">
               <div class="col px-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> August 9, 2021</span>
-                <h5 class="header mb-0">NIH Funds USU Researchers' Work on Fathers' Nutrition and Children's Health</h5>
+                <h5 class="header mb-0">USU Today - NIH Funds USU Researchers' Work on Fathers' Nutrition and Children's Health</h5>
                 <div class="desc mt-0">
                   Dr. Kaundal is a Co-PI on a $1.56M research grant from the NIH. 
                 </div>
@@ -231,7 +231,7 @@
             <div class="row ps-0">
               <div class="col px-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> April 6, 2021</span>
-                <h5 class="header mb-0">Uncovering Genes that Protect Alfalfa against Salinity Stress</h5>
+                <h5 class="header mb-0">USU Today - Uncovering Genes that Protect Alfalfa against Salinity Stress</h5>
                 <div class="desc mt-0">
                   Salt stress is an example of big data bringing immense benefits to plant science.
                 </div>
@@ -245,7 +245,7 @@
             <div class="row ps-0">
               <div class="col px-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> March 24, 2021</span>
-                <h5 class="header mb-0">Students Receive Grants to Conduct Undergraduate Research</h5>
+                <h5 class="header mb-0">USU Today - Students Receive Grants to Conduct Undergraduate Research</h5>
                 <div class="desc mt-0">
                   Kolton Hauck is using big data to investigate diverse strands of SARS-CoV-2 virus.
                 </div>
