--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -140,7 +140,7 @@
 
 {% set trustdb = {
     img: "/image/bioinfo/tools/wheat1.jpg",
-    title: "TrustDB",
+    title: "TRustDB",
     link: "http://bioinfo.usu.edu/trustdb/"
   }
 %}
