--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -145,7 +145,15 @@
   }
 %}
 
-{% set hpi = [predhpi, apinet, deepHPI, huco, malivhu] %}
+{% set hucovaria= {
+    img: "/image/bioinfo/tools/hucovaria.jpg",
+    title: "Hucovaria",
+    link: "http://bioinfo.usu.edu/hucovaria/"
+  }
+%}
+
+
+{% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, hucovaria] %}
 {% set clpt = [plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet, weconet, trustdb] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
