changed HuCoVarIA to match KBLDB name

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -147,7 +147,7 @@
 
 {% set hucovaria= {
     img: "/image/bioinfo/tools/hucovaria.jpg",
-    title: "Hucovaria",
+    title: "HuCoVarIA",
     link: "http://bioinfo.usu.edu/hucovaria/"
   }
 %}
