Updated HuCoVarIA tool name to work with kbldb.

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -145,15 +145,15 @@
   }
 %}
 
-{% set hucovaria= {
+{% set HuCoVarIA= {
     img: "/image/bioinfo/tools/hucovaria.jpg",
-    title: "Hucovaria",
+    title: "HuCoVarIA",
     link: "http://bioinfo.usu.edu/hucovaria/"
   }
 %}
 
 
-{% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, hucovaria] %}
+{% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, HuCoVarIA] %}
 {% set clpt = [plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet, weconet, trustdb] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
