Updating publications page to 04/18/22.

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,4 +1,50 @@
+{% set pub2022 = [
+  {
+    authors: "<u>Kataria, R.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "Deciphering the Host-Pathogen Interactome of Wheat-Common bunt system: A Step towards Enhanced Resilience in Next Generation Wheat.",
+    doiLink: "https://doi.org/10.3390/ijms23052589",
+    doiTitle: "https://doi.org/10.3390/ijms23052589"
+  },
+    {
+    authors: "<u>Duhan, N.</u>, Norton, J.M. and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "deepNEC: a novel alignment-free tool for the identification and classification of nitrogen biochemical network-related enzymes using deep learning.",
+    doiLink: "https://doi.org/10.1093/bib/bbac071",
+    doiTitle: "https://doi.org/10.1093/bib/bbac071"
+  },
+    {
+    authors: "<u>Kataria, R.</u>, <u>Duhan, N.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "Computational Systems Biology of Alfalfa-Bacterial Blight Host-Pathogen Interactions: Uncovering the Complex Molecular Networks for Developing Durable Disease Resistant Crop.",
+    doiLink: "https://doi.org/10.3389/fpls.2021.807354",
+    doiTitle: "https://doi.org/10.3389/fpls.2021.807354"
+  },
+    {
+    authors: "Yang, X., Hu, Xiao-Li., Zhang, J., <b>Kaundal, R.</b>, <u>Kataria, R.</u>, Jessy L.L., Mitchell, J., Tschaplinski, T., Tuskan, G.A. and Cheng, Zong-Ming (Max).",
+    content: "Diversity and conservation of plant small secreted proteins associated with arbuscular mycorrhizal symbiosis.",
+    doiLink: "https://doi.org/10.1093/hr/uhac043",
+    doiTitle: "https://doi.org/10.1093/hr/uhac043"
+  },
+    {
+    authors: "Rutigliano, H.M., Thomas, A.J., Umbaugh, J.J., Wilhelm, A., Sessions, B.R., <b>Kaundal, R.</b>, <u>Duhan, N.</u>, Hicks, B.A., Schlafer, D.H., White, K.L. and Davies, C.J.",
+    content: "Increased Expression of Pro-Inflammatory Cytokines at the Fetal-Maternal Interface in Bovine Pregnancies Produced by Cloning.",
+    doiLink: "https://doi.org/10.1111/aji.13520",
+    doiTitle: "https://doi.org/10.1111/aji.13520"
+  }
+]
+%}
+
 {% set pub2021 = [
+  {
+    authors: "<u>Duhan, N.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "LegumeSSRdb: a Comprehensive Microsatellite Marker Database of Legumes for Germplasm Characterization and Crop Improvement.",
+    doiLink: "https://doi.org/10.3390/ijms222111350",
+    doiTitle: "https://doi.org/10.3390/ijms222111350"
+  },
+  {
+    authors: "<u>Loaiza, C.D.</u>, <u>Duhan, N.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "GreeningDB: a database of host-pathogen protein-protein interactions and annotation features of the bacteria causing huanglongbing HLB disease.",
+    doiLink: "https://doi.org/10.3390/ijms221910897",
+    doiTitle: "https://doi.org/10.3390/ijms221910897"
+  },
   {
     authors: "Mohammadi, M<sup>$</sup>., Smith, E.A<sup>$^</sup>., Stanghellini, M.E., and <b>Kaundal, R<sup*</sup>.</b>",
     content: "Insights into the host specificity of a new oomycete root pathogen, Pythium brassicum P1: whole genome sequencing and comparative analysis reveals contracted regulation of metabolism, protein families, and distinct pathogenicity repertoire.",
