--- a/src/views/pages/publications/conferences/conferences.njk
+++ b/src/views/pages/publications/conferences/conferences.njk
@@ -15,7 +15,7 @@
 
   {% from './_functions.njk' import selector %}
   {% from 'components/conf-card.njk' import confCard %}
-  {% from './dates/20-21.njk' import pub2020 %}
+  {% from './dates/20-22.njk' import pub2022, pub2021, pub2020 %}
   {% from './dates/17-19.njk' import pub2019, pub2018, pub2017 %}
   {% from './dates/14-16.njk' import pub2016, pub2015, pub2014 %}
   {% from './dates/11-13.njk' import pub2013, pub2012 %}
@@ -23,7 +23,9 @@
   {% from './dates/02-04.njk' import pub2004, pub2002 %}
 
   {% set conferences = [
-    {range: '2020-2021', conf: pub2020, year: '2020'},
+    {range: '2020-2022', conf: pub2022, year: '2022'},
+    {range: '2020-2022', conf: pub2021, year: '2021'},
+    {range: '2020-2022', conf: pub2020, year: '2020'},
     {range: '2017-2019', conf: pub2019, year: '2019'},
     {range: '2017-2019', conf: pub2018, year: '2018'},
     {range: '2017-2019', conf: pub2017, year: '2017'},
@@ -52,7 +54,7 @@
     </section>
 
     <section class="row justify-content-center py-5">
-      {{ selector("2020-2021", routerYearRange) }}
+      {{ selector("2020-2022", routerYearRange) }}
       {{ selector("2017-2019", routerYearRange) }}
       {{ selector("2014-2016", routerYearRange) }}
       {{ selector("2011-2013", routerYearRange) }}
