Adding PMCID links to publications.

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,102 +1,113 @@
 {% set pub2022 = [
   {
-    authors: "<u>Kataria, R.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "Deciphering the Host-Pathogen Interactome of Wheat-Common bunt system: A Step towards Enhanced Resilience in Next Generation Wheat.",
-    doiLink: "https://doi.org/10.3390/ijms23052589",
-    doiTitle: "https://doi.org/10.3390/ijms23052589"
+    authors: '<u>Kataria, R.</u> and <b>Kaundal, R<sup>*</sup>.</b>',
+    content: 'Deciphering the Host-Pathogen Interactome of Wheat-Common bunt system: A Step towards Enhanced Resilience in Next Generation Wheat. <em>International Journal of Molecular Sciences</em> <b>23</b>(5): 2589. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8910311/" class="kbl-link" target="_blank">8910311</a>',
+    doiLink: 'https://doi.org/10.3390/ijms23052589',
+    doiTitle: 'https://doi.org/10.3390/ijms23052589'
   },
+
     {
-    authors: "<u>Duhan, N.</u>, Norton, J.M. and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "deepNEC: a novel alignment-free tool for the identification and classification of nitrogen biochemical network-related enzymes using deep learning.",
-    doiLink: "https://doi.org/10.1093/bib/bbac071",
-    doiTitle: "https://doi.org/10.1093/bib/bbac071"
+    authors: '<u>Duhan, N.</u>, Norton, J.M. and <b>Kaundal, R<sup>*</sup>.</b>',
+    content: 'deepNEC: a novel alignment-free tool for the identification and classification of nitrogen biochemical network-related enzymes using deep learning. <em>Briefings in Bioinformatics</em> bbac071: 1-16. <em>PMID:</em>35325031',
+    doiLink: 'https://doi.org/10.1093/bib/bbac071',
+    doiTitle: 'https://doi.org/10.1093/bib/bbac071'
   },
+
     {
-    authors: "<u>Kataria, R.</u>, <u>Duhan, N.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "Computational Systems Biology of Alfalfa-Bacterial Blight Host-Pathogen Interactions: Uncovering the Complex Molecular Networks for Developing Durable Disease Resistant Crop.",
-    doiLink: "https://doi.org/10.3389/fpls.2021.807354",
-    doiTitle: "https://doi.org/10.3389/fpls.2021.807354"
+    authors: '<u>Kataria, R.</u>, <u>Duhan, N.</u> and <b>Kaundal, R<sup>*</sup>.</b>',
+    content: 'Computational Systems Biology of Alfalfa-Bacterial Blight Host-Pathogen Interactions: Uncovering the Complex Molecular Networks for Developing Durable Disease Resistant Crop. <em>Frontiers in Plant Science</em> 12: 807354. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8891223/" class="kbl-link" target="_blank">8891223</a>',
+    doiLink: 'https://doi.org/10.3389/fpls.2021.807354',
+    doiTitle: 'https://doi.org/10.3389/fpls.2021.807354'
   },
+
     {
-    authors: "Yang, X., Hu, Xiao-Li., Zhang, J., <b>Kaundal, R.</b>, <u>Kataria, R.</u>, Jessy L.L., Mitchell, J., Tschaplinski, T., Tuskan, G.A. and Cheng, Zong-Ming (Max).",
-    content: "Diversity and conservation of plant small secreted proteins associated with arbuscular mycorrhizal symbiosis.",
-    doiLink: "https://doi.org/10.1093/hr/uhac043",
-    doiTitle: "https://doi.org/10.1093/hr/uhac043"
+    authors: 'Yang, X., Hu, Xiao-Li., Zhang, J., <b>Kaundal, R.</b>, <u>Kataria, R.</u>, Jessy L.L., Mitchell, J., Tschaplinski, T., Tuskan, G.A. and Cheng, Zong-Ming (Max).',
+    content: 'Diversity and conservation of plant small secreted proteins associated with arbuscular mycorrhizal symbiosis. <em>Horticulture Research</em> uhac043: 1-22. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8985099/" class="kbl-link" target="_blank">8985099</a>',
+    doiLink: 'https://doi.org/10.1093/hr/uhac043',
+    doiTitle: 'https://doi.org/10.1093/hr/uhac043'
   },
+
     {
-    authors: "Rutigliano, H.M., Thomas, A.J., Umbaugh, J.J., Wilhelm, A., Sessions, B.R., <b>Kaundal, R.</b>, <u>Duhan, N.</u>, Hicks, B.A., Schlafer, D.H., White, K.L. and Davies, C.J.",
-    content: "Increased Expression of Pro-Inflammatory Cytokines at the Fetal-Maternal Interface in Bovine Pregnancies Produced by Cloning.",
-    doiLink: "https://doi.org/10.1111/aji.13520",
-    doiTitle: "https://doi.org/10.1111/aji.13520"
+    authors: 'Rutigliano, H.M., Thomas, A.J., Umbaugh, J.J., Wilhelm, A., Sessions, B.R., <b>Kaundal, R.</b>, <u>Duhan, N.</u>, Hicks, B.A., Schlafer, D.H., White, K.L. and Davies, C.J.',
+    content: 'Increased Expression of Pro-Inflammatory Cytokines at the Fetal-Maternal Interface in Bovine Pregnancies Produced by Cloning. <em>American Journal of Reproductive Immunology</em>, e13520. <em>PMID:</em>34974639',
+    doiLink: 'https://doi.org/10.1111/aji.13520',
+    doiTitle: 'https://doi.org/10.1111/aji.13520'
   }
 ]
 %}
 
 {% set pub2021 = [
   {
-    authors: "<u>Duhan, N.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "LegumeSSRdb: a Comprehensive Microsatellite Marker Database of Legumes for Germplasm Characterization and Crop Improvement.",
-    doiLink: "https://doi.org/10.3390/ijms222111350",
-    doiTitle: "https://doi.org/10.3390/ijms222111350"
+    authors: '<u>Duhan, N.</u> and <b>Kaundal, R<sup>*</sup>.</b>',
+    content: 'LegumeSSRdb: a Comprehensive Microsatellite Marker Database of Legumes for Germplasm Characterization and Crop Improvement. <em>International Journal of Molecular Sciences</em> <b>22</b>(21): 11350. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8583334/" class="kbl-link" target="_blank">8583334</a>',
+    doiLink: 'https://doi.org/10.3390/ijms222111350',
+    doiTitle: 'https://doi.org/10.3390/ijms222111350'
   },
+
   {
-    authors: "<u>Loaiza, C.D.</u>, <u>Duhan, N.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "GreeningDB: a database of host-pathogen protein-protein interactions and annotation features of the bacteria causing huanglongbing HLB disease.",
-    doiLink: "https://doi.org/10.3390/ijms221910897",
-    doiTitle: "https://doi.org/10.3390/ijms221910897"
+    authors: '<u>Loaiza, C.D.</u>, <u>Duhan, N.</u> and <b>Kaundal, R<sup>*</sup>.</b>',
+    content: 'GreeningDB: a database of host-pathogen protein-protein interactions and annotation features of the bacteria causing huanglongbing HLB disease. <em>International Journal of Molecular Sciences</em> <b>22</b>(19): 10897. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8509195/" class="kbl-link" target="_blank">8509195</a>',
+    doiLink: 'https://doi.org/10.3390/ijms221910897',
+    doiTitle: 'https://doi.org/10.3390/ijms221910897'
   },
+
   {
-    authors: "Mohammadi, M<sup>$</sup>., Smith, E.A<sup>$^</sup>., Stanghellini, M.E., and <b>Kaundal, R<sup*</sup>.</b>",
-    content: "Insights into the host specificity of a new oomycete root pathogen, Pythium brassicum P1: whole genome sequencing and comparative analysis reveals contracted regulation of metabolism, protein families, and distinct pathogenicity repertoire.",
-    doiLink: "https://doi.org/10.3390/ijms22169002",
-    doiTitle: "10.3390/ijms22169002"
+    authors: 'Mohammadi, M<sup>$</sup>., Smith, E.A<sup>$^</sup>., Stanghellini, M.E., and <b>Kaundal, R<sup*</sup>.</b>',
+    content: 'Insights into the host specificity of a new oomycete root pathogen, Pythium brassicum P1: whole genome sequencing and comparative analysis reveals contracted regulation of metabolism, protein families, and distinct pathogenicity repertoire. <em>International Journal of Molecular Sciences</em> <b>22</b>(16): 9002. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8396444/" class="kbl-link" target="_blank">8396444 </a>',
+    doiLink: 'https://doi.org/10.3390/ijms22169002',
+    doiTitle: '10.3390/ijms22169002'
   },
+
   {
-    authors: "<u>Kataria, R.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "alfaNET: A Database of Alfalfa-Bacterial Stem Blight Protein–Protein Interactions Revealing the Molecular Features of the Disease-causing Bacteria",
-    doiLink: "https://doi.org/10.3390/ijms22158342",
-    doiTitle: "10.3390/ijms22158342"
+    authors: '<u>Kataria, R.</u> and <b>Kaundal, R<sup>*</sup>.</b>',
+    content: 'alfaNET: A Database of Alfalfa-Bacterial Stem Blight Protein–Protein Interactions Revealing the Molecular Features of the Disease-causing Bacteria. <em>International Journal of Molecular Sciences</em> <b>22</b>(15): 8342. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc8348475/" class="kbl-link" target="_blank">8348475</a>',
+    doiLink: 'https://doi.org/10.3390/ijms22158342',
+    doiTitle: '10.3390/ijms22158342'
   },
+
   {
-    authors: "<b>Kaundal, R.<sup>*</sup></b>, <u>Duhan, N.</u>, Acharya, B., Pudussery, M., Ferreira, J., Suarez, D., and Sandhu, D<sup>*</sup>.",
-    content: "Transcriptional profiling of two contrasting genotypes uncovers molecular mechanisms underlying salt tolerance in alfalfa",
-    doiLink: "https://doi.org/10.1038/s41598-021-84461-w",
-    doiTitle: "10.1038/s41598-021-84461-w"
+    authors: '<b>Kaundal, R.<sup>*</sup></b>, <u>Duhan, N.</u>, Acharya, B., Pudussery, M., Ferreira, J., Suarez, D., and Sandhu, D<sup>*</sup>.',
+    content: 'Transcriptional profiling of two contrasting genotypes uncovers molecular mechanisms underlying salt tolerance in alfalfa. <em>Scientific Reports - Nature</em> <b>11</b>(1): 5210. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc7933430/" class="kbl-link" target="_blank">7933430</a>',
+    doiLink: 'https://doi.org/10.1038/s41598-021-84461-w',
+    doiTitle: '10.1038/s41598-021-84461-w'
   },
+
   {
-    authors: "<u>Loaiza, C.D.</u> and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "PredHPI: an integrated web server platform for the detection and visualization of host-pathogen interactions using sequence-based methods.",
-    doiLink: "https://doi.org/10.1093/bioinformatics/btaa862",
-    doiTitle: "10.1093/bioinformatics/btaa862"
+    authors: '<u>Loaiza, C.D.</u> and <b>Kaundal, R<sup>*</sup>.</b>',
+    content: 'PredHPI: an integrated web server platform for the detection and visualization of host-pathogen interactions using sequence-based methods. <em>Bioinformatics</em> <b>37</b>(5): 622-624. <em>PMID:</em>33027504',
+    doiLink: 'https://doi.org/10.1093/bioinformatics/btaa862',
+    doiTitle: '10.1093/bioinformatics/btaa862'
   },
+
   {
-    authors: "<u>Loaiza, C.D.</u>, <u>Duhan, N.</u>, <i>Lister, M.</i>, and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "In silico prediction of host-pathogen protein interactions in melioidosis pathogen Burkholderia pseudomallei and human reveals novel virulence factors and their targets.",
-    doiLink: "http://dx.doi.org/10.1093/bib/bbz162",
-    doiTitle: "10.1093/bib/bbz162"
+    authors: '<u>Loaiza, C.D.</u>, <u>Duhan, N.</u>, <i>Lister, M.</i>, and <b>Kaundal, R<sup>*</sup>.</b>',
+    content: 'In silico prediction of host-pathogen protein interactions in melioidosis pathogen Burkholderia pseudomallei and human reveals novel virulence factors and their targets.<em>Briefings in Bioinformatics</em> <b>22</b>(3): 1-18. <em>PMID:</em>32444871',
+    doiLink: 'http://dx.doi.org/10.1093/bib/bbz162',
+    doiTitle: '10.1093/bib/bbz162'
   }
 ]
 %}
 
 {% set pub2020 = [
   {
-    authors: "<u>Duhan, N.</u>, <u>Meshram, M.</u>, <u>Loaiza, C.D.</u>, and <b>Kaundal, R<sup>*</sup>.</b>",
-    content: "citSATdb: genome wide Simple Sequence Repeats (SSR) marker database of citrus species for germplasm characterization and improvement. Genes 11(12): 1486.",
-    doiLink: "https://www.mdpi.com/2073-4425/11/12/1486?utm_source=releaseissue&utm_medium=email&utm_campaign=releaseissue_genes&utm_term=doilink122",
-    doiTitle: "10.3390/genes11121486"
+    authors: '<u>Duhan, N.</u>, <u>Meshram, M.</u>, <u>Loaiza, C.D.</u>, and <b>Kaundal, R<sup>*</sup>.</b>',
+    content: 'citSATdb: genome wide Simple Sequence Repeats (SSR) marker database of citrus species for germplasm characterization and improvement. <em>Genes</em> <b>11</b>(12): 1486. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc7764524/" class="kbl-link" target="_blank">7764524</a>',
+    doiLink: 'https://www.mdpi.com/2073-4425/11/12/1486?utm_source=releaseissue&utm_medium=email&utm_campaign=releaseissue_genes&utm_term=doilink122',
+    doiTitle: '10.3390/genes11121486'
   },
+
   {
-    authors: "<u>Sahu, S.S.</u>, <u>Loaiza, C.D.</u>, and <b>Kaundal, R<sup*</sup>.</b>",
-    content: "Plant-mSubP: a computational framework for the prediction of single- and multi-target protein subcellular localization using integrated machine learning approaches.",
-    doiLink: "https://doi.org/10.1093/aobpla/plz068",
-    doiTitle: "10.1093/aobpla/plz068"
+    authors: '<u>Sahu, S.S.</u>, <u>Loaiza, C.D.</u>, and <b>Kaundal, R<sup*</sup>.</b>',
+    content: 'Plant-mSubP: a computational framework for the prediction of single- and multi-target protein subcellular localization using integrated machine learning approaches. <em>AoB Plants</em> <b>12</b>(3): plz068. <em>PMCID:</em> <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc7274489/" class="kbl-link" target="_blank">7274489</a>',
+    doiLink: 'https://doi.org/10.1093/aobpla/plz068',
+    doiTitle: '10.1093/aobpla/plz068'
   }
 ]
 %}
 
 {% set pub2019 = [
   {
-    authors: "Sharma B., Batz T.A., <b>Kaundal R<sup>*</sup>.</b>, Kramer E.M., Sanders U.R.<sup>^</sup>, Mellano V.J., <u>Duhan N.</u>, and <i><u>Larson R.B.</u></i>",
+    authors: 'Sharma B., Batz T.A., <b>Kaundal R<sup>*</sup>.</b>, Kramer E.M., Sanders U.R.<sup>^</sup>, Mellano V.J., <u>Duhan N.</u>, and <i><u>Larson R.B.</u></i>',
     content: 'Developmental and Molecular Changes Underlying the Vernalization-Induced Transition to Flowering in <i>Aquilegia coerulea</i> (James). <i>Genes</i>, <b>10</b>(10): 734. <em>PMCID:</em> <a href="https://www.mdpi.com/2073-4425/10/10/734" class="kbl-link" target="_blank">31546687</a>',
     doiLink: 'https://www.mdpi.com/2073-4425/10/10/734',
     doiTitle: '10.3390/genes10100734'
